# scrabble-core

./: .rustfmt.toml  Cargo.toml  README.md
assets/: build_dawg.py
examples/: j.rs
src/: data_structures.rs  dawg.rs  lib.rs  loading.rs  main.rs  scrabble.rs  solving.rs  trie.rs
src/game/: board.rs  checked_square.rs  cross_checks.rs  mod.rs  play_generation.rs  rack.rs  scoring.rs  util.rs
src/scrabble/: board.rs  checked_square.rs  cross_checks.rs  mod.rs  play_generation.rs  rack.rs  scoring.rs  scrabble_board.rs  scrabble_board_square.rs  scrabble_rack.rs  util.rs
