[package]
name = "scrabble"
version = "0.1.0"
authors = ["David Montague <david@exactrics.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
hardback_codec = {"path"="../hardback_codec"}

[profile.release]
#lto = true

[profile.bench]
lto = true

[features]
unstable = []
